# healthcare

./: .clang-format  .clang-tidy  .clangd  .cursor-highlighting.json  .cursor.json  .editorconfig  .gitignore  AUTO_ARCH_SEARCH_GUIDE.md  CITATION.md  CMakeLists.txt  CMakePresets.json  COMPREHENSIVE_TESTING_GUIDE.md  CONTRIBUTING.md  COPYRIGHT_HEADER.txt  CTestTestfile.cmake  CustomSemiconductorPlan.md  FRAMEWORK_ENHANCEMENT.md  HardwareRequirementsSpec.md  LICENSE  Makefile.simple  Makefile.tmp15df6  NOTICE  NextStep.md  QMMM_INTEGRATION_README.md  README.md  README_RADIATION_AWARE_TRAINING.md  README_TESTING.md  RadTolerantMLtoHardwareRoadmap.md  STUDENT_GUIDE.md  SemiconductorDesignEnhancements.md  SemiconductorDesignGuide.md  SemiconductorDesignSupplementary.md  SemiconductorImplementationBlueprint.md  SpaceLabs.md  SpaceLabsEngineeringReference.md  SpaceLabsLibraryGuide.md  TESTING_SUMMARY.md  VERSION_HISTORY.md  advanced_tmr_demo.py  apply-patches.sh  (+94 more)
.cursor/: settings.json
.github/: FUNDING.yml
build_python/: CTestTestfile.cmake  framework_verification_test  modern_features_test  quantum_field_example  quantum_field_validation_test  realistic_space_validation  scientific_validation_test  space_monte_carlo_validation  systematic_fault_test
build_simple/: qmmm_integration_test
build_test/: CTestTestfile.cmake  enhanced_tmr_test  framework_verification_test  modern_features_test  monte_carlo_validation  nasa_esa_standard_test  radiation_stress_test  realistic_space_validation  scientific_validation_test  space_monte_carlo_validation  systematic_fault_test
cmake/: RadTolerantCursorConfig.cmake  RadTolerantIDE.cmake
comparison/: baseline_report.html  enhanced_report.html  enhanced_results.csv
docs/: CHEMOTHERAPY_RELEASE_NOTES.md  Doxyfile  chemotherapy_extension.md  quantum_monte_carlo.md  quantum_research_plan.md
examples/: CMakeLists.txt  CTestTestfile.cmake  README_QFT_BRIDGE.md  architecture_test  architecture_test.cpp  auto_arch_search_example  auto_arch_search_example.cpp  crossdomain_bridge_example.cpp  crossdomain_simplified.cpp  enhanced_healthcare_example.cpp  fixed_qft_bridge_analysis.cpp  ml_inference_example.cpp  qft_bridge_analysis.cpp  qft_enhanced_network_example.cpp  quantum_field_example.cpp  quantum_integration_example.cpp  quantum_simulation_example.cpp  radiation_aware_training_example  radiation_aware_training_example.cpp  residual_network_test  residual_network_test.cpp  tmr_example.py
examples/enhanced_features_test/: approx_tmr_test.cpp  enhanced_features_test.cpp  extreme_stress_test.cpp  simple_test.cpp
examples/mission_simulator/: CMakeLists.txt  CTestTestfile.cmake  mission_simulator  mission_simulator.cpp
examples/orbit_simulation/: README.md  rad_tolerant_ml_demo.cpp
examples/simple_nn/: CMakeLists.txt  CTestTestfile.cmake  main.cpp  simple_nn
output/: framework_test_results.txt
patches/: README.md  pybind11-cmake-version.patch
python/: README.md  rad_ml_core.cpp  rad_ml_minimal.cpp  setup.py
quantum_mc_build/: CMakeLists.txt  quantum_wave_mc_test
rad_ml_minimal/: __init__.py
results/: crossdomain_simplified_output.txt  healthcare_test_output.txt  qft_bridge_analysis_output.txt  qft_bridge_test_output.txt  qft_enhanced_network_output.txt
src/: CMakeLists.txt  enhanced_features_test.cpp  enhanced_vs_baseline_test.cpp  enhancement_comparison.cpp  industry_standard_test.cpp  mission_simulation_test.cpp  nasa_esa_standard_runner.cpp  quantum_mc_test.cpp  space_mission_validation_test.cpp
src/healthcare/: CMakeLists.txt  bio_quantum_integration.cpp  qmmm_integration_test.cpp  radiation_therapy_model.cpp  radiation_therapy_model.hpp
src/healthcare/chemotherapy/: chemo_quantum_model.cpp  chemoradiation_synergy.cpp  chemotherapy_test.cpp  drug_target_interaction.cpp
src/physics/: CMakeLists.txt  quantum_integration.cpp
src/rad_ml/: CMakeLists.txt
src/rad_ml/crossdomain/: qft_bridge.cpp
src/rad_ml/healthcare/: enhanced_radiation_therapy_model.cpp
src/rad_ml/healthcare/cell_biology/: cell_cycle_model.cpp  dna_damage_model.cpp  repair_kinetics.cpp
src/rad_ml/healthcare/imaging/: dicom_integration.cpp
src/rad_ml/healthcare/monte_carlo/: damage_simulation.cpp
src/rad_ml/healthcare/quantum_enhanced/: parameter_optimizer.cpp  tunneling_model.cpp  wave_equation_solver.cpp
src/rad_ml/neural/: qft_enhanced_network.cpp  qft_enhanced_network_example.cpp
src/rad_ml/physics/: CMakeLists.txt  quantum_field_theory.cpp  quantum_models.cpp
src/rad_ml/research/: CMakeLists.txt  CTestTestfile.cmake  architecture_tester.cpp  auto_arch_search.cpp  radiation_aware_training.cpp
src/rad_ml/research/tests/: CMakeLists.txt  CTestTestfile.cmake  architecture_tester_test.cpp  rad_ml_research_tests  residual_network_test.cpp
src/rad_ml/sim/: CMakeLists.txt  environment.cpp
src/test/: CMakeLists.txt  neural_sensitivity_test.cpp  quantum_wave_mc_test.cpp  space_mission_neural_test.cpp  test_runner.cpp
src/tmr/: CMakeLists.txt  CTestTestfile.cmake  adaptive_protection.cpp
src/validation/: CMakeLists.txt  cross_section_utils.hpp  nasa_esa_standard_test.cpp  nasa_esa_standard_test.hpp  nasa_esa_standard_test_part2.cpp  nasa_esa_validation_protocol.cpp  nasa_esa_validation_protocol.hpp  radiation_accuracy_validator.hpp  radiation_validation_report.hpp  radiation_validation_test.cpp  seu_benchmark.cpp
test/: CMakeLists.txt  CTestTestfile.cmake  comprehensive_model_test.cpp  healthcare_test.cpp  (+6 more)
test/healthcare/: CMakeLists.txt  CTestTestfile.cmake  cell_cycle_test.cpp  dna_damage_test.cpp  full_framework_test.cpp  monte_carlo_test.cpp  quantum_validation_test.cpp
test/validation/: CMakeLists.txt
test/verification/: CMakeLists.txt  CTestTestfile.cmake  README.md  enhanced_tmr_test.cpp  framework_verification_test.cpp  modern_features_test.cpp  monte_carlo_neuralnetwork.cpp  monte_carlo_validation.cpp  neural_network_validation.cpp  quantum_field_validation_test.cpp  radiation_stress_test.cpp  realistic_space_validation.cpp  scientific_validation_test.cpp  space_monte_carlo_validation.cpp  systematic_fault_test.cpp
(+168 files in other folders)
